--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -1,9 +1,9 @@
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
-ENV NGINX_PLUS_VERSION   29-1
-ENV NGINX_VERSION        1.23.4
-ENV NJS_VERSION          29+0.7.12-1
-ENV XSLT_VERSION         29-1
+ENV NGINX_PLUS_VERSION   30-2
+ENV NGINX_VERSION        1.25.1
+ENV NJS_VERSION          30+0.8.0-1
+ENV XSLT_VERSION         30-1
 
 ENV PROXY_CACHE_MAX_SIZE "10g"
 ENV PROXY_CACHE_INACTIVE "60m"
