--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -1,10 +1,10 @@
-FROM debian:bookworm-slim
+FROM debian:bookworm-slim@sha256:155280b00ee0133250f7159b567a07d7cd03b1645714c3a7458b2287b0ca83cb
 
 ENV NGINX_PLUS_VERSION   30-2
 ENV NGINX_VERSION        1.25.1
 ENV NJS_VERSION          30+0.8.0-1
 ENV XSLT_VERSION         30-1
- 
+
 ENV PROXY_CACHE_MAX_SIZE "10g"
 ENV PROXY_CACHE_INACTIVE "60m"
 ENV PROXY_CACHE_SLICE_SIZE "1m"
