--- a/examples/gzip-compression/Dockerfile.oss
+++ b/examples/gzip-compression/Dockerfile.oss
@@ -1,3 +1,3 @@
-FROM nginxinc/nginx-s3-gateway
+FROM nginxinc/nginx-s3-gateway@sha256:8aa48324479b3653b5936183cc97f2ca1aa9078d229042f1bca357834bd906f4
 
 COPY etc/nginx/conf.d /etc/nginx/conf.d
