ci: address OSSF Scorecard warnings (#243)
* remediate the `Token-Permissions` warning/low score by moving the F5 CLA GH Action permissions around

* remediate the `Pinned-Dependencies` warning/low score by using specific Docker image SHAs and adding Docker image updates to Dependabot

* hopefully remediate the `Vulnerabilities` warning/low score by recreating `package-lock.json`

* ci: add `workflow_dispatch` and cron jobs to both the Scorecard and the S3 gateway build actions be able to run the workflow on demand and run the workflow at least once a week in case there's been no new builds/PRs in the last week

--- a/examples/brotli-compression/Dockerfile.oss
+++ b/examples/brotli-compression/Dockerfile.oss
@@ -1,5 +1,4 @@
-FROM nginxinc/nginx-s3-gateway
-
+FROM nginxinc/nginx-s3-gateway@sha256:8aa48324479b3653b5936183cc97f2ca1aa9078d229042f1bca357834bd906f4
 ENV BROTLI_VERSION "v1.0.0rc"
 
 # Build Brotli module from source because there is no repository package
