--- a/.github/workflows/s3-gateway.yml
+++ b/.github/workflows/s3-gateway.yml
@@ -1,10 +1,13 @@
 ---
-name: CI
+name: NGINX S3 Gateway CI/CD
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+  schedule:
+    - cron: "0 0 * * 1"
+  workflow_dispatch:
 env:
   CI: true
 permissions: read-all
@@ -24,6 +27,7 @@ permissions: read-all
 
 jobs:
   build-oss-for-test:
+    name: Build NGINX OSS image
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase
@@ -49,6 +53,7 @@ jobs:
           if-no-files-found: error
 
   test-oss:
+    name: Test NGINX OSS image
     runs-on: ubuntu-22.04
     needs: build-oss-for-test
     strategy:
@@ -91,6 +96,7 @@ jobs:
         run: S3_STYLE=${{ matrix.path_style }} ./test.sh --type oss
 
   build-latest-njs-for-test:
+    name: Build NGINX OSS image using latest njs commit
     runs-on: ubuntu-22.04
     needs: test-oss
     steps:
@@ -134,6 +140,7 @@ jobs:
           if-no-files-found: error
 
   test-latest-njs:
+    name: Test NGINX OSS image using latest njs commit
     runs-on: ubuntu-22.04
     needs: build-latest-njs-for-test
     steps:
@@ -174,6 +181,7 @@ jobs:
         run: ./test.sh --latest-njs --type oss
 
   build-unprivileged-for-test:
+    name: Build NGINX OSS unprivileged image
     runs-on: ubuntu-22.04
     needs: test-oss
     steps:
@@ -217,6 +225,7 @@ jobs:
           if-no-files-found: error
 
   test-unprivileged:
+    name: Test NGINX OSS unprivileged image
     runs-on: ubuntu-22.04
     needs: build-unprivileged-for-test
     steps:
@@ -258,6 +267,7 @@ jobs:
 
 # As a last step (only if run from main) multi-architecture images are built and pushed to Docker Hub and the GitHub Container Registry
   tag-and-push:
+    name: Tag and push all built and tested NGINX images
     runs-on: ubuntu-22.04
     needs: [test-oss, test-latest-njs, test-unprivileged]
     if: |
